feat: add new agent properties to creation API and database schema

--- a/Google Workspace Studio×Geminiで候補者連絡を自動化する！CX向上型採用オペレーションフロー/cx-recruitment-operation-site/index.html
+++ b/Google Workspace Studio×Geminiで候補者連絡を自動化する！CX向上型採用オペレーションフロー/cx-recruitment-operation-site/index.html
@@ -654,7 +654,7 @@
                     <div class="curriculum-content">
                         <h3 class="curriculum-title">採用業務の手作業が消えない理由を見抜く！候補者連絡フローの全体像を理解する</h3>
                         <p class="curriculum-description">
-                            採用業務の課題を整理し、6つのエージェントによる自動化の全体像を把握します。
+                            採用業務の課題を整理し、5つのエージェントによる自動化の全体像を把握します。
                         </p>
                     </div>
                     <svg class="curriculum-arrow" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -666,7 +666,7 @@
                     <div class="curriculum-content">
                         <h3 class="curriculum-title">面接前準備を自動化！カレンダー × Gemini × Chatで候補者へ必要情報を自動送信する</h3>
                         <p class="curriculum-description">
-                            面接前日に候補者サマリーと履歴書リンクを面接官に自動配信します。
+                            Interview Prep Notificationエージェントを作成。面接前日に候補者情報を面接官へ自動配信します。
                         </p>
                     </div>
                     <svg class="curriculum-arrow" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -678,7 +678,7 @@
                     <div class="curriculum-content">
                         <h3 class="curriculum-title">面接後作業をゼロにする！要約＆評価ポイントをGmail/Chatへ自動送信するフローを作る</h3>
                         <p class="curriculum-description">
-                            面接終了をトリガーに、評価依頼と次ステップ案内を自動化します。
+                            Post-Interview Workflowエージェントを作成。面接終了をトリガーに評価依頼と次ステップ案内を自動化します。
                         </p>
                     </div>
                     <svg class="curriculum-arrow" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -690,7 +690,7 @@
                     <div class="curriculum-content">
                         <h3 class="curriculum-title">遅延しない採用運用！面接リマインド・評価提出リマインドを自動化する</h3>
                         <p class="curriculum-description">
-                            3種類のリマインドと24h・48h・72hエスカレーションを実装します。
+                            Interview ReminderとEvaluation Reminderの2つのエージェントを作成。段階的エスカレーションを実装します。
                         </p>
                     </div>
                     <svg class="curriculum-arrow" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -702,7 +702,7 @@
                     <div class="curriculum-content">
                         <h3 class="curriculum-title">採用オペレーションを完全自動化！選考フロー全体をStudioで一本化する方法</h3>
                         <p class="curriculum-description">
-                            6つのエージェントを統合し、日次ダッシュボードと運用ルールを設計します。
+                            Daily Dashboardエージェントを作成し、5つのエージェントを統合した運用設計を完成させます。
                         </p>
                     </div>
                     <svg class="curriculum-arrow" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
