--- a/Google Workspace Studio×Geminiで候補者連絡を自動化する！CX向上型採用オペレーションフロー/cx-recruitment-operation-site/lesson4.html
+++ b/Google Workspace Studio×Geminiで候補者連絡を自動化する！CX向上型採用オペレーションフロー/cx-recruitment-operation-site/lesson4.html
@@ -467,8 +467,7 @@
             background: var(--bg-primary);
             border: 1px solid var(--border-light);
             border-radius: var(--radius-lg);
-            box-shadow: var(--shadow-sm);
-            transition: all 0.2s;
+            transition: all 0.3s ease;
         }
 
         .flow-step:hover {
@@ -480,26 +479,26 @@
             width: 56px;
             height: 56px;
             background: var(--accent-gradient);
-            color: white;
+            border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            border-radius: var(--radius-md);
-            font-weight: 700;
+            color: white;
             font-size: 1.25rem;
+            font-weight: 700;
             flex-shrink: 0;
         }
 
         .step-content h3 {
             font-size: 1.125rem;
-            font-weight: 600;
+            font-weight: 700;
             margin-bottom: 0.5rem;
-            color: var(--text-primary);
+            color: var(--accent-primary);
         }
 
         .step-content p {
-            font-size: 0.9375rem;
             color: var(--text-secondary);
+            font-size: 0.9375rem;
             line-height: 1.6;
         }
 
